<resources>
    <string name="app_name">TripIT</string>
    <string name="haveAcc">Already have an account?? LogIn</string>
    <string name="joinnow">Join Now</string>
    <string name="lg">Login</string>
    <string name="logout"> Log Out</string>
    <string name="forgotpass"> Forgot password</string>
    <string name="adminpanel"> I am an admin</string>
    <string name="notadminpanel"> I am not an admin</string>
    <string name="remember">Remember Me</string>

    <string name="Createaccount">Create Account</string>
    <string name="name">Name</string>
    <string name="adminwelcome">Welcome.. </string>
    <string name="places">Places</string>
    <string name="guides">Guides</string>
    <string name="shops">Shops</string>
    <string name="hotels">Hotels</string>

    <string name="place">Place</string>
    <string name="address">Address</string>

    <string name="Addplace">Add Place </string>
    <string name="viewplaces">View Places</string>
    <string name="back">Back</string>
    <string name="view">View Places</string>
    <string name="edittextname">Name of the place</string>
    <string name="edittextDistrict">District where the place is situated</string>
    <string name="edittextdescription">Write a Description</string>
    <string name="edittextaddress">Enter the address of the place</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome">Hi there !!!! Welcome To TripIt.... </string>

    <string name="description">Description</string>


    <string name="guidewithvehical">Guide With Vehical</string>
    <string name="guideonly">Guide Only</string>
    <string name="AddGuideLabel">"  Select the type to add a new member.."</string>
    <string name="WithVehicalLabel">Guide with vehical</string>
    <string name="OnlyGuideLabel">Only Guide</string>
    <string name="MaintainGuidesButton">MAINTAIN GUIDES</string>
    <string name="ViewAllGuideDetailsButton">VIEW ALL GUIDE\'S DETAILS</string>
    <string name="EnterGuideDetailsLabel">-ADD NEW GUIDE-</string>
    <string name="UplordPhotoHint">Uploard your photo:</string>
    <string name="GuideNameHint">Guide\'s Name..</string>
    <string name="GuidesTelHint">Guide\'s Telephone Number...</string>
    <string name="GuidesAgeHint">Guide\'s Age</string>
    <string name="GuidesExperianceHint">Guide\'s Experiance</string>
    <string name="AmountPerdayHint">Amount Per-day</string>
    <string name="AddguideButton">Add Guide</string>
    <string name="WelcomeToGuideManagementLabel">WELCOME TO GUIDE\'S MANAGEMENT..!</string>
    <string name="SelectGuideTypeLabel">Select the type to add a new guide...</string>
    <string name="EnterChangeDetailsLabel">Enter the details which you want to change....</string>
    <string name="ApplyChangesButton">Apply Changes</string>
    <string name="DeleteThisGuideButton">Delete This Guide</string>


    <string name="description1"> About Hotel....</string>
    <string name="addHotel"> Add hotel</string>
    <string name="Hotels"> Hotels</string>
    <string name="managehotels"> Manage Hotels</string>
    <string name="hotel">Hotel</string>
    <string name="edittexthotelname">Name of the hotel</string>
    <string name="edittexthoteldescription">About the Hotel</string>
    <string name="edittexthoteladdress">Address of  the Hotel</string>
    <string name="edittexthotelcontact">Contact numbers</string>


    <string name="category"> Item Category</string>
    <string name="price">Price</string>
    <string name="descriptionItem">Item Description</string>
    <string name="btn1">SHOP NOW!</string>
    <string name="text1">Lets shopping now!</string>
</resources>