<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlacesActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:background="@drawable/addplace"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/Ed_name_of_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_below="@+id/image"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_design"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:inputType="text"
        android:hint="@string/edittextname"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/Ed_name_of_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_below="@+id/Ed_name_of_place"
        android:background="@drawable/input_design"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:hint="@string/edittextDistrict"
        android:inputType="text"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/Ed_description_of_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_below="@+id/Ed_name_of_district"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:background="@drawable/input_design"
        android:hint="@string/edittextdescription"
        android:inputType="text"
        android:textAlignment="center"
        />


    <EditText
        android:id="@+id/Ed_address_of_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_below="@+id/Ed_description_of_place"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:background="@drawable/input_design"
        android:hint="@string/edittextaddress"
        android:inputType="text"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/admin_add_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/Ed_address_of_place"
        android:background="@drawable/buttons"
        android:text="@string/Addplace"
        android:textColor="@color/cardview_light_background"
        />

</RelativeLayout>