<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/userhome"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textwelcomeuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgBtnLogOut"
        android:padding="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/welcome"
        android:textSize="26sp"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_user_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:layout_below="@+id/textwelcomeuser"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/places"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/cardview_light_background"
        />

    <Button
        android:id="@+id/btn_user_guides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:layout_below="@+id/btn_user_places"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textStyle="bold"
        android:text="@string/guides"
        android:textSize="16sp"
        android:textColor="@color/cardview_light_background"
        />

    <Button
        android:id="@+id/btn_user_hotels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:layout_below="@+id/btn_user_guides"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/hotels"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/cardview_light_background"
        />

    <Button
        android:id="@+id/btn_user_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:layout_below="@+id/btn_user_hotels"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/shops"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/cardview_light_background"
        />

    <ImageButton
        android:id="@+id/imgBtnLogOut"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/logout"
        android:layout_marginLeft="300dp"
        />


</RelativeLayout>