<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailsActivity">

    <ImageView
        android:id="@+id/shop_detail_image"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="260dp"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/shop_detail_nam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="28sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/cardview_dark_background"
        android:layout_marginTop="10dp"
        android:text="@string/category"
        android:layout_below="@+id/shop_detail_image"
        />

    <TextView
        android:id="@+id/shop_detail_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:text="@string/price"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/cardview_dark_background"
        android:textAlignment="center"
        android:layout_below="@+id/shop_detail_nam"
        />

    <TextView
        android:id="@+id/shop_detail_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textStyle="italic"
        android:text="@string/descriptionItem"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/shop_detail_price"
        android:textColor="@color/cardview_dark_background"
        />

</RelativeLayout>