<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceDetailsActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

    <ImageView
        android:id="@+id/place_detail_image"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="260dp"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/place_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="23sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorblue"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        />

    <TextView
        android:id="@+id/place_detail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:text="@string/address"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorblue"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/place_detail_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:textStyle="italic"
        android:text="@string/description"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/colorblue"
        />
     </LinearLayout>
    </ScrollView>
</RelativeLayout>